--- a/richTextEditor.html
+++ b/richTextEditor.html
@@ -4,9 +4,9 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-        <script type="text/javascript" src="script.js"></script>
+        <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <script src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
         </head>
     <body>
         <div class="container">
@@ -67,12 +67,12 @@
                 <div class="panel-body" style="height: 300px;">
                     <div id="WYSIWYG" class="WYSIWYG"style="outline:none; width: 100%; height: 100%; overflow:auto;" contenteditable></div>
                 </div>
-                <div class="panel-footer text-right">字数： <span class="badge" id="count">42</span></div>
+                <div class="panel-footer text-right">字数： <span class="badge" id="count">0</span></div>
             </div>
         </div>
     </body>
     
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript">
     //显示字体下拉框的fontfamily
         $("#changefont").children().each(function(){
